syntax = "proto3";

option go_package = "github.com/duc-cnzj/mars/client/model;model";

message GitlabProjectModel {
  int64 id = 1;
  string default_branch = 2;
  string name = 3;
  int64 gitlab_project_id = 4;
  bool enabled = 5;
  bool global_enabled = 6;
  string global_config = 7;
  string created_at = 8;
  string updated_at = 9;
}

message NamespaceModel {
  int64 id = 1;
  string name = 2;
  repeated string image_pull_secrets = 3;
  string created_at = 4;
  string updated_at = 5;

  repeated ProjectModel projects = 7;
}

message ProjectModel {
  int64 id = 1;
  string name = 2;
  int64 gitlab_project_id = 3;
  string gitlab_branch = 4;
  string gitlab_commit = 5;
  string config = 6;
  string override_values = 7;
  string docker_image = 8;
  string pod_selectors = 9;
  int64 namespace_id = 10;
  bool atomic = 11;
  string created_at = 12;
  string updated_at = 13;
  NamespaceModel namespace = 15;
}